Fix contrast ratio of sellingPointHeader on home page

--- a/client/src/components/pages/Home/Home.module.scss
+++ b/client/src/components/pages/Home/Home.module.scss
@@ -49,6 +49,7 @@
 
 .sellingPointHeading {
   margin-bottom: var(--vertical-spacer-large);
+  color: var(--clr-fg);
   text-align: center;
 }
 
